--- a/css/main.css
+++ b/css/main.css
@@ -23,14 +23,14 @@ section { display: flex }
 .text-secondary { font-size: 30px; color: #faa541 }
 .text-primary { font-size: 16px; color: #364147 }
 .header-nav { border-bottom: 1px; border-color: #a0a0a0 }
-.brand { width: 170px; height: 85px; margin-left: -15; margin-right: 60 }
+.brand { width: 170px; height: 85px; margin-left: -15px; margin-right: 60px }
 .logo { max-width: 100%; height: auto }
-.search-box { width: 330; height: 30; padding: 6px 12px; border: 1px solid #a0a0a0 }
-.search-button { color: #ffffff; background-color: #a0a0a0; width: 100; height: 30; padding: 0 }
+.search-box { width: 330px; height: 30px; padding: 6px 12px; border: 1px solid #a0a0a0 }
+.search-button { color: #ffffff; background-color: #a0a0a0; width: 100px; height: 30px; padding: 0 }
 .nav-list { padding-left: 0; width: 575px; margin-top: 10px }
 .nav-list li a { font: 16px uppercase 700; word-spacing: 0.2px }
 .profile { margin-left: auto }
 .account { text-align: right; padding: 15px; font: 18px #364147 }
 .account * { font-size: 14px }
-.profile-pic { width: 60; width: 60 }
+.profile-pic { width: 60px; width: 60px }
 .profile-pic img { border-radius: 100px; max-width: 100% }
