--- a/css/main.css
+++ b/css/main.css
@@ -32,5 +32,5 @@ section { display: flex }
 .profile { margin-left: auto }
 .account { text-align: right; padding: 15px; font-size: 18px; color: #364147 }
 .account a { font-size: 14px }
-.profile-pic { width: 60px; width: 60px }
+.profile-pic { width: 60px; height: 60px }
 .profile-pic img { border-radius: 100px; max-width: 100% }
