--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,12 @@ section { display: flex }
 .full-banner-sidebar > div:nth-of-type(1) { font-size: 60px; font-weight: 700; line-height: 1 }
 .full-banner-sidebar > div:nth-of-type(2) { font-size: 25px; font-weight: 200; letter-spacing: 3px }
 .full-banner-sidebar .btn.btn-default { margin-top: 50px; text-transform: uppercase; letter-spacing: 1px; z-index: 1 }
-.footer { flex-wrap: wrap; position: relative; z-index: 0; min-height: 330px; background-color: black }
+.footer { display: wrap; flex-wrap: wrap; position: relative; z-index: 0; min-height: 330px; background-color: black }
 .footer:after { content: ""; background-color: #a0a0a0; width: 75%; position: absolute; top: 0; right: 0; bottom: 0;left: 0; z-index: -1 }
-.lists { flex: 0 0 75%; left: 15px; right: 15px; padding-top: 40px; padding-bottom: 40px }
+.lists { flex: 0 0 75%; padding: 40px 15px }
 .link-header { text-transform: uppercase; font-size: 16px; font-weight: 700; margin-bottom: 15px }
-.footer a { color: white; text-transform: uppercase; font-size: 12px; padding: 0 0 4px; }
-.footer a:hover { text-decoration: underline }
+footer a { color: white; text-transform: uppercase; font-size: 12px; padding: 0 0 4px; }
+footer a:hover { text-decoration: underline }
 .social ul li { display: inline-block }
 .social ul li a { display: block; width: 23px; height: 23px; background-size: 23px 23px; background-position: center }
 .twitter { background-image: url('../img/twitter.svg') }
